# PlayCounter

./: .gitattributes  .gitignore  .prettierignore  IDEA.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: azure-static-web-apps-purple-bush-05715bb03.yml  prod-deploy.yml  test-deploy.yml
apps/: .env.example
apps/api/: package.json
apps/desktop/: .env.production  .env.test  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.test.conf.json  tauri.test.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/ignored-processes/: linux.txt  macos.txt  windows.txt
apps/desktop/src-tauri/src/: ignored_processes.rs  lib.rs  main.rs  session.rs
apps/desktop/src-tauri/src/process/: linux.rs  macos.rs  mod.rs  windows.rs
docs/: BACKLOG.md  auto-updates.md
landing/: datenschutz.html  impressum.html  index.html  llms.txt  robots.txt  sitemap.xml  staticwebapp.config.json  styles.css
landing/fonts/: fonts.css
landing/how-automatic-game-detection-works/: index.html
landing/playcounter-vs-playnite/: index.html
landing/supported-games/: index.html
landing/track-playtime-outside-steam/: index.html
scripts/: build-desktop.cmd  dev-desktop.cmd
scripts/ci/: check-desktop-version-sync.mjs  create-tauri-latest-json.mjs  package-api.mjs  read-desktop-version.mjs  sync-desktop-version.mjs
scripts/igdb-seed/: package.json
(+47 files in other folders)
