[package]
name = "playcounter"
version = "1.0.3"
description = "Launcher-agnostic game play tracker"
authors = ["PlayCounter"]
edition = "2021"

[lib]
name = "playcounter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }
